--- a/simlane/templates/base.html
+++ b/simlane/templates/base.html
@@ -24,7 +24,7 @@
     {% block body %}
       <div class="flex-grow flex flex-col">
         {% include 'components/navbar.html' %}
-        <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 pt-4">
+        <div class="max-w-7xl w-full mx-auto px-4 sm:px-6 lg:px-8 pt-4">
           {% include 'components/messages.html' %}
           <main id="main-content">
             {% block main %}
